--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>PG Finder Mohali | Boys & Girls PG in Phase 5, 7, 10 Mohali</title>
+<meta name="description" content="Find verified PGs in Mohali. Boys and Girls PG in Phase 5, Phase 7, Phase 10. Direct owner contact. No brokerage.">
   </head>
   <body>
     <div id="root"></div>
