--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PG Finder Mohali | Boys & Girls PG in Phase 5, 7, 10 Mohali</title>
 <meta name="description" content="Find verified PGs in Mohali. Boys and Girls PG in Phase 5, Phase 7, Phase 10. Direct owner contact. No brokerage.">
+<meta name="google-site-verification" content="rDTfSYdhWYb6XcK5Kz3irp3dfg_OxoEipGUcpThyCrQ" />
   </head>
   <body>
     <div id="root"></div>
