change in index

--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PG Finder Mohali | Boys & Girls PG in Phase 5, 7, 10 Mohali</title>
-<meta name="description" content="Find verified PGs in Mohali. Boys and Girls PG in Phase 5, Phase 7, Phase 10. Direct owner contact. No brokerage.">
-<meta name="google-site-verification" content="rDTfSYdhWYb6XcK5Kz3irp3dfg_OxoEipGUcpThyCrQ" />
+    <!-- <title>PG Finder Mohali | Boys & Girls PG in Phase 5, 7, 10 Mohali</title>
+    <meta name="description" content="Find verified PGs in Mohali. Boys and Girls PG in Phase 5, Phase 7, Phase 10. Direct owner contact. No brokerage.">
+    <meta name="google-site-verification" content="rDTfSYdhWYb6XcK5Kz3irp3dfg_OxoEipGUcpThyCrQ" /> -->
+
+    <title>PG Finder Mohali | Boys & Girls PG, Rooms in Mohali</title>
+
+    <meta name="description" content="Find verified Boys PG, Girls PG, Rooms and Hostels in Mohali near Phase 5 & Phase 7. Affordable and trusted accommodations." />
+
+    <meta name="keywords" content="PG in Mohali, Boys PG Mohali, Girls PG Mohali, Rooms in Mohali, PG in Mohali with food, PG for girls in Mohali, PG for boys in Mohali, Pg in phase 5, Pg in phase 7, PG in Mohali under 5000" />
+
+    <meta property="og:title" content="PG Finder Mohali">
+    <meta property="og:description" content="Find affordable PGs, Rooms & Hostels in Mohali.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://pg-finder-mohali.vercel.app/">
   </head>
   <body>
     <div id="root"></div>
